# oci-cost-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  billing.py  cache.py  config.py  main.py  oci_usage.py  time_utils.py
docs/superpowers/plans/: 2026-07-08-oci-current-month-cost-service.md
docs/superpowers/specs/: 2026-07-07-oci-current-month-cost-service-design.md
tests/: test_api.py  test_auth.py  test_billing.py  test_cache.py  test_config.py  test_oci_usage.py  test_time_utils.py
