[project]
name = "oci-current-month-cost-service"
version = "0.1.0"
description = "Dockerized FastAPI service for current-month OCI costs"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "oci>=2.126.0",
  "pydantic-settings>=2.3.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
